[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "Screenton_maker_rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = ["version"]
dependencies = [
    # https://github.com/PyO3/rust-numpy
    "numpy>=1.16.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]
